# cpp-stub

./: CMakeLists.txt  Readme.md  conanfile.txt
project/: .gitignore  CMakeLists.txt  conanfile.txt  install_conan.sh
project-with-catch2/: conanfile.txt
project-with-catch2/src/lib/: args.hpp  version.cpp
project-with-catch2/src/test/: test-args.cpp  test-cli.cpp  test-version.cpp
project-with-gtest/: conanfile.txt
project-with-gtest/src/lib/: CMakeLists.txt  cli_app.hpp  command_line_arguments.hpp  command_line_arguments.inl  parse_args.cpp  parse_args.hpp
project-with-gtest/src/test/: CMakeLists.txt  test-args.cpp  test-command_line_arguments.cpp  test-version.cpp
project/src/app/: _entry.cpp  main.cpp
project/src/lib/: CMakeLists.txt  args.cpp  entrance.cpp  entrance.hpp  parse_args.cpp  parse_args.hpp  version.cpp  version.hpp
project/src/test/: CMakeLists.txt  test-entrance.cpp  test-version.cpp
src/app/: _entry.cpp
src/lib/: cli.cpp  cli.hpp
src/test/: CMakeLists.txt  test-version.cpp
