file(GLOB_RECURSE SRC *.cpp *.hpp)
add_library(${PROJECT_NAME} STATIC ${SRC})
string(TIMESTAMP DATE "%Y%m%d")
string(TIMESTAMP TIME "%H%M%S")
target_compile_definitions(${PROJECT_NAME} PRIVATE
        LIB_VERSION_MAJOR=${PROJECT_VERSION_MAJOR}
        LIB_VERSION_MINOR=${PROJECT_VERSION_MINOR}
        DATESTAMP=${DATE}
        TIMESTAMP=${TIME})
